[project]
authors = [{name = "gerald-scharitzer", email = "gerald.scharitzer@gmail.com"}]
dependencies = []
description = "Azure with Python and Azure SDK"
name = "azure-python-sdk"
requires-python = ">= 3.11"
version = "0.1.0a0.dev0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "Microsoft"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
azure_python_sdk = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
azure-mgmt-subscription = ">=3.1.1,<4"
